--- a/src/admin.html
+++ b/src/admin.html
@@ -11,14 +11,14 @@
   <meta name="author" content="smohan, 水墨寒, smohan.net" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <link rel="shortcut icon" type="image/ico" href="/static/favicon.ico" />
-  <link rel="stylesheet" href="/static/wangEditor/wangEditor.min.css">
+  <link rel="stylesheet" href="/static/wangEditor/wangEditor.css">
   <title>管理 - MBlog</title>
 </head>
 
 <body>
   <div id="app"></div>
 
-  <script src="/static/wangEditor/wangEditor.min.js"></script>
+  <script src="/static/wangEditor/wangEditor.js"></script>
 </body>
 
 </html>
